[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "rubti_beancount_import"
version = "1.0"
dependencies = [
    "beancount<=3.2",
    "beangulp",
    "pandas",
    "openpyxl",
    "identify",
    "pyyaml",
]
requires-python = ">= 3"

authors = [{ name = "Thilo Wendt" }]
description = "Beancount importers for various CSV formats"
readme = "README.md"
keywords = ["beancount", "sparkasse", "bbva", "edenred"]
classifiers = [
    "Programming Language :: Python",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Topic :: Office/Business :: Financial :: Accounting",
    "Typing :: Typed",
]

[project.optional-dependencies]
dev = ["black", "isort", "pre-commit"]

[project.urls]
Repository = "https://github.com/rubti/beancount-import"

[tool.isort]
profile = "black"
